# tinyCompiler

./: .gitignore  CMakeLists.txt  README.md  a.ll  a.out  ast.dot  conf_yacc_lex.sh  example.c.txt  main.cpp  run.sh  tcc
ast/: ast.c  ast.h  ast_node_type.h
code_gen/: CodeGenerator.cpp  CodeGenerator.h  Symbol.h  code_gen_casting.cpp  code_gen_expr.cpp  code_gen_init_list.cpp  code_generator.cpp  code_generator.h  init_list.h  symbol.h
compiler/: tiny_compiler.cpp  tiny_compiler.h
exceptions/: parse_exception.cpp  parse_exception.h  parser_error.cpp  parser_error.h
lexer/: base_lexer.cpp  base_lexer.h  lexer.l  tcLexer.cpp  tcLexer.h  tiny_compiler_lex.c  tiny_compiler_lex.h  tokens.h
parser/: TCParser.cpp  TCParser.h  parser.c  parser.h  parser.y  tc_parser.cpp  tc_parser.h  tiny_compiler_yacc.c  tiny_compiler_yacc.h  tiny_compiler_yacc.output
preprocesser/: tc_preprocessor.cpp  tc_preprocessor.h
preprocessor/: pre_lexer.l  preprocessor.h  tc_preprocessor.cpp  tc_preprocessor.h  tiny_compiler_prepo.c  tiny_compiler_prepo.h
sematics/: sematics.cpp  sematics.h
static_semantics/: sematics.cpp  sematics.h
types/: type.cpp  type.h  type_casting.cpp  type_casting.h  type_checks.cpp  type_checks.h  type_factory.cpp  type_factory.h
visualizer/: syntax_tree_printer.cpp  syntax_tree_printer.h
